apply plugin: 'com.android.library'

apply plugin: 'kotlin-android'

apply plugin: 'kotlin-android-extensions'

apply plugin: 'kotlin-kapt'

android {
    compileSdkVersion rootProject.ext.android['compileSdkVersion']


    defaultConfig {
        minSdkVersion rootProject.ext.android['minSdkVersion']
        targetSdkVersion rootProject.ext.android['targetSdkVersion']
        versionCode rootProject.ext.android['versionCode']
        versionName rootProject.ext.android['versionName']


    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    kapt {
        arguments {
            arg("AROUTER_MODULE_NAME", project.getName())
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    kotlinOptions {
        jvmTarget = '1.8'
    }

    dataBinding {
        enabled = true
    }

    lintOptions {
        disable 'GoogleAppIndexingWarning'
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    api rootProject.ext.dependenciesX['appcompat']
    api rootProject.ext.dependenciesX['design']
    api rootProject.ext.dependenciesX['support-v4']
    api rootProject.ext.dependenciesX['annotations']
    api rootProject.ext.dependenciesX['lifcycle-extensions']
    api rootProject.ext.dependenciesX['lifcycle-viewModel']
    api rootProject.ext.dependenciesX['coroutines-core']
    api rootProject.ext.dependenciesX['coroutines-android']

    api(rootProject.ext.dependenciesX['utils']) {
        exclude group: 'com.google.code.gson', module: 'gson'
    }
    api rootProject.ext.dependenciesX['multidex']

    api(rootProject.ext.dependencies['retrofit']) {
        exclude group: 'com.squareup.okhttp3', module: 'okhttp'
        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
    }
    api rootProject.ext.dependencies['retrofit-converter-gson']

    api rootProject.ext.dependencies['retrofit-logging']
    api rootProject.ext.dependencies['okhttp3']

    api rootProject.ext.dependencies['autosize']
    api(rootProject.ext.dependencies['glide']) {
        exclude group: 'androidx.annotation', module: 'annotation'
    }
    api rootProject.ext.dependencies['arouter']
    api(rootProject.ext.dependencies['mmkv']) {
        exclude group: 'androidx.annotation', module: 'annotation'
    }
    api rootProject.ext.dependencies['eventbus']

    debugApi rootProject.ext.dependencies['canary-debug']
    releaseApi rootProject.ext.dependencies['canary-release']


}
